# nuanced

./: CHANGELOG.md  README.md  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: version_bump_template.md
.github/workflows/: test.yml
data/: lizard_metrics.json
scripts/: analyze_complexity.py
src/: sample.py
src/nuanced/: __init__.py  cli.py  code_graph.py
src/nuanced/lib/: call_graph.py  utils.py
src/nuanced_graph/: __init__.py  package.py  parse_symbol.py  scip.py  types.py
tests/fixtures/: other_fixture_class.py  test_functions.py
tests/fixtures/large_test_package/json_toolkit/: __init__.py  __main__.py
tests/fixtures/large_test_package/json_toolkit/core/: parser.py  transformer.py
tests/fixtures/large_test_package/json_toolkit/utils/: io.py  validators.py
tests/fixtures/test_package/: fixture_class.py  fixture_class.scip
tests/nuanced/: call_graph_test.py  cli_test.py  code_graph_test.py
tests/nuanced-graph/: generate_scip.py  test_scip.py  test_symbol_parser.py
tests/package_fixtures/: fixture_class.py
tests/package_fixtures/nested_package/: mod_one.py
