[project]
name = "nuanced-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrew Spott", email = "spott@nuanced.dev" }
]
requires-python = ">=3.10"
dependencies = [
    "protobuf>=5.29.3",
    "pydantic>=2.10.6",
]

[project.scripts]
staticmind = "nuanced-graph:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
