[project]
name = "nuanced"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ayman Nadeem", email = "ayman@nuanced.dev" }
]
requires-python = ">=3.8"
dependencies = [
    "setuptools>=75.3.0",
    "jarviscg",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
jarviscg = { git = "https://github.com/nuanced-dev/jarviscg" }

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
